<resources>
    <string name="app_name">LabsAndroid</string>
    <string name="lab2p1">Lab 2 Part 1</string>
    <string name="lab2p2">Lab 2 Part 2</string>
    <string name="lab3p1">Lab 3 Part 1</string>
    <string name="lab3p2">Lab 3 Part 2</string>
    <string name="quadratic_equasion">Квадратное уравнение</string>
    <string name="eqA">a = </string>
    <string name="eqB">b = </string>
    <string name="eqC">c = </string>
    <string name="eqFull">a*x^2 + b*x + c = 0</string>
    <string name="btnEqSolve">Решить</string>
    <string name="solutions">Решения</string>
    <string name="x1">x1 = </string>
    <string name="x2">x2 = </string>
    <string name="table">Таблица умножения</string>
    <string name="testAll">Упражнение для всех чисел</string>
    <string name="testProgress">Упражнение %d / %d</string>
    <string name="testEq">%d * %d = ?</string>
    <string name="testManual">Упражнение выборочно</string>
    <string name="testSend">Отправить</string>
    <string name="testStart">Начать</string>
    <string name="testError">Неверный формат числа</string>
    <string name="testSelect">Выберите число</string>
    <string name="testOK">Правильный ответ</string>
    <string name="testWrong">Неверный ответ</string>
    <string name="testOKCount">Правильные ответы: %d</string>
    <string name="testWrongCount">Неверные ответы: %d</string>
    <string name="testPercent">Процент ответов: %d %%</string>
    <string name="testResult">Результат:</string>
    <string name="mtable">Multiplications table</string>
    <string name="check">Проверить</string>
    <string name="next">Далее</string>
    <string name="placeholder">Placeholder</string>
    <string name="add">Добавить</string>
    <string name="added">Добавлено</string>
    <string name="reset">Сбросить</string>
    <string name="fuelName">Топливо: %s</string>
    <string name="fuelCount">Количество: %.2f</string>
    <string name="fuelTotal">Выручка: %.2f</string>
    <string name="fuelTotalTotal">Общая выручка: %.2f</string>
    <string name="fuelNameHint">Название:</string>
    <string name="fuelCountHint">Количество:</string>
    <string name="viewAdd">Добавить</string>
    <string name="viewList">Текущее количество</string>
    <string name="lab4">Lab 4</string>
    <string name="btnSelect">Выбрать игроков</string>
    <string name="btnTeam">Распределить по командам</string>
    <string name="btnAdd">Добавить</string>
    <string name="btnRemove">Убрать выделенных</string>
    <string name="btnSave">Сохранить изменения</string>
    <string name="btnReload">Перезагрузить</string>
    <string name="team1">Команда 1</string>
    <string name="team2">Команда 2</string>
</resources>