<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:text="@string/quadratic_equasion"
        android:textSize="14pt"/>

    <LinearLayout
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eqA" android:textSize="14pt" android:labelFor="@id/inEqA"/>
        <EditText android:minWidth="24pt" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/inEqA" android:textSize="14pt" android:inputType="numberDecimal|numberSigned"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eqB" android:textSize="14pt" android:labelFor="@id/inEqB"/>
        <EditText android:minWidth="24pt" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/inEqB" android:textSize="14pt" android:inputType="numberDecimal|numberSigned"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eqC" android:textSize="14pt" android:labelFor="@id/inEqC"/>
        <EditText android:minWidth="24pt" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/inEqC" android:textSize="14pt" android:inputType="numberDecimal|numberSigned"/>

    </LinearLayout>

    <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eqFull" android:textSize="14pt"/>
    <Button android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="14pt"
        android:text="@string/btnEqSolve"
        android:id="@+id/btnEqSolve"
        android:layout_margin="20dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textEqErr"
        android:textColor="@color/red"
        android:textSize="12pt"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:text="@string/solutions"
        android:textSize="14pt"/>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x1" android:textSize="14pt"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textEqX1" android:textSize="14pt"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/x2" android:textSize="14pt"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textEqX2" android:textSize="14pt"/>
    </LinearLayout>
</LinearLayout>