<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="14pt"
        android:text="@string/testResult"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="14pt"
        android:text="@string/testOKCount"
        android:id="@+id/textResultOk"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="14pt"
        android:text="@string/testWrongCount"
        android:id="@+id/textResultWrong"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="14pt"
        android:text="@string/testPercent"
        android:id="@+id/textResultPercent"/>

</LinearLayout>