<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:text="@string/table" android:textSize="14pt"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="378dp"
        android:layout_height="508dp"
        android:layout_gravity="center"
        android:contentDescription="@string/mtable"
        android:src="@drawable/images"
        android:visibility="visible" />

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/layoutTable"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:id="@+id/btnTestAll"
        android:text="@string/testAll"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"
        android:id="@+id/btnTestManual"
        android:text="@string/testManual"/>

</LinearLayout>