<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".lab3.Lab3P1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="263dp"
            android:minWidth="263dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editPersonName"
            android:layout_width="wrap_content"
            android:minWidth="100pt"
            android:hint="@string/placeholder"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textSize="14pt"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/buttonPersonAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/check" />

        <TextView
            android:id="@+id/textPersonResult"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:text="@string/testOK"
            android:textColor="@color/green"/>
    </LinearLayout>
</LinearLayout>
